Assignment_2/code/backups/03March/decafch.output
Terminals unused in grammar

   COMMENT
   SYN_ERR
   PREC_LOW
   PREC_HIGH


State 196 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: /* empty */
    3        | class_decl_multi

    4 class_decl_multi: class_decl
    5                 | class_decl_multi class_decl

    6 class_decl: CLASS ID class_body
    7           | CLASS ID EXTEND ID class_body

    8 class_body: OPEN_BRACE class_body_elems CLOSE_BRACE

    9 class_body_elems: class_body_decl
   10                 | class_body_elems class_body_decl

   11 class_body_decl: field_decl
   12                | method_decl
   13                | constructor_decl

   14 field_decl: modifier var_decl

   15 modifier: /* empty */
   16         | PUBLIC
   17         | PUBLIC STATIC
   18         | PRIVATE
   19         | PRIVATE STATIC
   20         | STATIC

   21 var_decl: type variables SEMI_COLON

   22 type: INT
   23     | FLOAT
   24     | BOOLEAN
   25     | ID

   26 variables: variable
   27          | variables COMMA variable

   28 variable: ID sqr_brkt_mult

   29 sqr_brkt_mult: /* empty */
   30              | sqr_brkt_mult OPEN_SQR_BRACKET CLOSE_SQR_BRACKET

   31 method_decl: modifier type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier type ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   33            | modifier VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34            | modifier VOID ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

   35 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   36                 | modifier ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

   37 formals: formal_param
   38        | formals COMMA formal_param

   39 formal_param: type variable

   40 block: OPEN_BRACE stmt_mult CLOSE_BRACE

   41 stmt_mult: stmt
   42          | stmt_mult stmt

   43 stmt: SEMI_COLON
   44     | BREAK SEMI_COLON
   45     | CONTINUE SEMI_COLON
   46     | RETURN SEMI_COLON
   47     | RETURN expr SEMI_COLON
   48     | WHILE OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt
   49     | FOR OPEN_PARANTHESIS for_init SEMI_COLON for_condition SEMI_COLON for_var_update CLOSE_PARANTHESIS stmt
   50     | stmt_expr SEMI_COLON
   51     | block
   52     | var_decl
   53     | IF OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt else_part

   54 else_part: /* empty */
   55          | else_part ELSE stmt

   56 for_init: /* empty */
   57         | stmt_expr

   58 for_condition: /* empty */
   59              | expr

   60 for_var_update: /* empty */
   61               | stmt_expr

   62 literal: int_const
   63        | float_const
   64        | string_const
   65        | NULL_TOKEN
   66        | TRUE
   67        | FALSE

   68 int_const: INT_CONST

   69 float_const: FLOAT_CONST
   70            | FLOAT_CONST_MANTISSA

   71 string_const: STRING_CONST

   72 primary: literal
   73        | THIS
   74        | SUPER
   75        | OPEN_PARANTHESIS expr CLOSE_PARANTHESIS
   76        | NEW ID OPEN_PARANTHESIS arguments_mult CLOSE_PARANTHESIS
   77        | lhs
   78        | method_invocation

   79 arguments: expr
   80          | arguments COMMA expr

   81 arguments_mult: /* empty */
   82               | arguments

   83 lhs: array_access
   84    | field_access

   85 field_access: primary DOT ID
   86             | ID

   87 array_access: primary OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET

   88 method_invocation: field_access OPEN_PARANTHESIS arguments_mult CLOSE_PARANTHESIS

   89 expr: primary
   90     | assign
   91     | new_array
   92     | expr PLUS expr
   93     | expr MINUS expr
   94     | expr MULTIPLY expr
   95     | expr DIVIDE expr
   96     | expr AND expr
   97     | expr OR expr
   98     | expr EQUAL_EQUAL expr
   99     | expr NOT_EQUAL expr
  100     | expr LESS expr
  101     | expr GREATER expr
  102     | expr LESS_EQUAL expr
  103     | expr GREATER_EQUAL expr
  104     | NOT expr
  105     | PLUS expr
  106     | MINUS expr

  107 assign: lhs EQUAL expr
  108       | lhs PLUS_PLUS
  109       | PLUS_PLUS lhs
  110       | lhs MINUS_MINUS
  111       | MINUS_MINUS lhs

  112 new_array: NEW type new_array_expr
  113          | NEW type new_array_expr sqr_brkt_1

  114 new_array_expr: OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET
  115               | new_array_expr OPEN_SQR_BRACKET expr CLOSE_SQR_BRACKET

  116 sqr_brkt_1: OPEN_SQR_BRACKET CLOSE_SQR_BRACKET
  117           | sqr_brkt_1 OPEN_SQR_BRACKET CLOSE_SQR_BRACKET

  118 stmt_expr: assign
  119          | method_invocation


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_CONST (258) 68
FLOAT_CONST (259) 69
STRING_CONST (260) 71
FLOAT_CONST_MANTISSA (261) 70
ID (262) 6 7 25 28 31 32 33 34 35 36 76 85 86
COMMENT (263)
SYN_ERR (264)
INT (265) 22
FLOAT (266) 23
IF (267) 53
ELSE (268) 55
WHILE (269) 48
FOR (270) 49
RETURN (271) 46 47
BREAK (272) 44
CONTINUE (273) 45
NULL_TOKEN (274) 65
TRUE (275) 66
FALSE (276) 67
THIS (277) 73
SUPER (278) 74
NEW (279) 76 112 113
CLASS (280) 6 7
EXTEND (281) 7
OPEN_BRACE (282) 8 40
CLOSE_BRACE (283) 8 40
SEMI_COLON (284) 21 43 44 45 46 47 49 50
STATIC (285) 17 19 20
PUBLIC (286) 16 17
PRIVATE (287) 18 19
BOOLEAN (288) 24
COMMA (289) 27 38 80
DOT (290) 85
OPEN_PARANTHESIS (291) 31 32 33 34 35 36 48 49 53 75 76 88
CLOSE_PARANTHESIS (292) 31 32 33 34 35 36 48 49 53 75 76 88
OPEN_SQR_BRACKET (293) 30 87 114 115 116 117
CLOSE_SQR_BRACKET (294) 30 87 114 115 116 117
VOID (295) 33 34
PLUS (296) 92 105
PLUS_PLUS (297) 108 109
MINUS (298) 93 106
MINUS_MINUS (299) 110 111
MULTIPLY (300) 94
DIVIDE (301) 95
NOT_EQUAL (302) 99
NOT (303) 104
OR (304) 97
AND (305) 96
EQUAL_EQUAL (306) 98
EQUAL (307) 107
LESS_EQUAL (308) 102
LESS (309) 100
GREATER_EQUAL (310) 103
GREATER (311) 101
UPLUS (312)
UMINUS (313)
PREC_LOW (314)
PREC_HIGH (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
start (62)
    on left: 1, on right: 0
program (63)
    on left: 2 3, on right: 1
class_decl_multi (64)
    on left: 4 5, on right: 3 5
class_decl (65)
    on left: 6 7, on right: 4 5
class_body (66)
    on left: 8, on right: 6 7
class_body_elems (67)
    on left: 9 10, on right: 8 10
class_body_decl (68)
    on left: 11 12 13, on right: 9 10
field_decl (69)
    on left: 14, on right: 11
modifier (70)
    on left: 15 16 17 18 19 20, on right: 14 31 32 33 34 35 36
var_decl (71)
    on left: 21, on right: 14 52
type (72)
    on left: 22 23 24 25, on right: 21 31 32 39 112 113
variables (73)
    on left: 26 27, on right: 21 27
variable (74)
    on left: 28, on right: 26 27 39
sqr_brkt_mult (75)
    on left: 29 30, on right: 28 30
method_decl (76)
    on left: 31 32 33 34, on right: 12
constructor_decl (77)
    on left: 35 36, on right: 13
formals (78)
    on left: 37 38, on right: 32 34 36 38
formal_param (79)
    on left: 39, on right: 37 38
block (80)
    on left: 40, on right: 31 32 33 34 35 36 51
stmt_mult (81)
    on left: 41 42, on right: 40 42
stmt (82)
    on left: 43 44 45 46 47 48 49 50 51 52 53, on right: 41 42 48 49
    53 55
else_part (83)
    on left: 54 55, on right: 53 55
for_init (84)
    on left: 56 57, on right: 49
for_condition (85)
    on left: 58 59, on right: 49
for_var_update (86)
    on left: 60 61, on right: 49
literal (87)
    on left: 62 63 64 65 66 67, on right: 72
int_const (88)
    on left: 68, on right: 62
float_const (89)
    on left: 69 70, on right: 63
string_const (90)
    on left: 71, on right: 64
primary (91)
    on left: 72 73 74 75 76 77 78, on right: 85 87 89
arguments (92)
    on left: 79 80, on right: 80 82
arguments_mult (93)
    on left: 81 82, on right: 76 88
lhs (94)
    on left: 83 84, on right: 77 107 108 109 110 111
field_access (95)
    on left: 85 86, on right: 84 88
array_access (96)
    on left: 87, on right: 83
method_invocation (97)
    on left: 88, on right: 78 119
expr (98)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106, on right: 47 48 53 59 75 79 80 87 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 114 115
assign (99)
    on left: 107 108 109 110 111, on right: 90 118
new_array (100)
    on left: 112 113, on right: 91
new_array_expr (101)
    on left: 114 115, on right: 112 113 115
sqr_brkt_1 (102)
    on left: 116 117, on right: 113 117
stmt_expr (103)
    on left: 118 119, on right: 50 57 61


state 0

    0 $accept: . start $end

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (program)

    start             go to state 2
    program           go to state 3
    class_decl_multi  go to state 4
    class_decl        go to state 5


state 1

    6 class_decl: CLASS . ID class_body
    7           | CLASS . ID EXTEND ID class_body

    ID  shift, and go to state 6


state 2

    0 $accept: start . $end

    $end  shift, and go to state 7


state 3

    1 start: program .

    $default  reduce using rule 1 (start)


state 4

    3 program: class_decl_multi .
    5 class_decl_multi: class_decl_multi . class_decl

    CLASS  shift, and go to state 1

    $default  reduce using rule 3 (program)

    class_decl  go to state 8


state 5

    4 class_decl_multi: class_decl .

    $default  reduce using rule 4 (class_decl_multi)


state 6

    6 class_decl: CLASS ID . class_body
    7           | CLASS ID . EXTEND ID class_body

    EXTEND      shift, and go to state 9
    OPEN_BRACE  shift, and go to state 10

    class_body  go to state 11


state 7

    0 $accept: start $end .

    $default  accept


state 8

    5 class_decl_multi: class_decl_multi class_decl .

    $default  reduce using rule 5 (class_decl_multi)


state 9

    7 class_decl: CLASS ID EXTEND . ID class_body

    ID  shift, and go to state 12


state 10

    8 class_body: OPEN_BRACE . class_body_elems CLOSE_BRACE

    STATIC   shift, and go to state 13
    PUBLIC   shift, and go to state 14
    PRIVATE  shift, and go to state 15

    $default  reduce using rule 15 (modifier)

    class_body_elems  go to state 16
    class_body_decl   go to state 17
    field_decl        go to state 18
    modifier          go to state 19
    method_decl       go to state 20
    constructor_decl  go to state 21


state 11

    6 class_decl: CLASS ID class_body .

    $default  reduce using rule 6 (class_decl)


state 12

    7 class_decl: CLASS ID EXTEND ID . class_body

    OPEN_BRACE  shift, and go to state 10

    class_body  go to state 22


state 13

   20 modifier: STATIC .

    $default  reduce using rule 20 (modifier)


state 14

   16 modifier: PUBLIC .
   17         | PUBLIC . STATIC

    STATIC  shift, and go to state 23

    $default  reduce using rule 16 (modifier)


state 15

   18 modifier: PRIVATE .
   19         | PRIVATE . STATIC

    STATIC  shift, and go to state 24

    $default  reduce using rule 18 (modifier)


state 16

    8 class_body: OPEN_BRACE class_body_elems . CLOSE_BRACE
   10 class_body_elems: class_body_elems . class_body_decl

    CLOSE_BRACE  shift, and go to state 25
    STATIC       shift, and go to state 13
    PUBLIC       shift, and go to state 14
    PRIVATE      shift, and go to state 15

    $default  reduce using rule 15 (modifier)

    class_body_decl   go to state 26
    field_decl        go to state 18
    modifier          go to state 19
    method_decl       go to state 20
    constructor_decl  go to state 21


state 17

    9 class_body_elems: class_body_decl .

    $default  reduce using rule 9 (class_body_elems)


state 18

   11 class_body_decl: field_decl .

    $default  reduce using rule 11 (class_body_decl)


state 19

   14 field_decl: modifier . var_decl
   31 method_decl: modifier . type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier . type ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   33            | modifier . VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34            | modifier . VOID ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block
   35 constructor_decl: modifier . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   36                 | modifier . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID       shift, and go to state 27
    INT      shift, and go to state 28
    FLOAT    shift, and go to state 29
    BOOLEAN  shift, and go to state 30
    VOID     shift, and go to state 31

    var_decl  go to state 32
    type      go to state 33


state 20

   12 class_body_decl: method_decl .

    $default  reduce using rule 12 (class_body_decl)


state 21

   13 class_body_decl: constructor_decl .

    $default  reduce using rule 13 (class_body_decl)


state 22

    7 class_decl: CLASS ID EXTEND ID class_body .

    $default  reduce using rule 7 (class_decl)


state 23

   17 modifier: PUBLIC STATIC .

    $default  reduce using rule 17 (modifier)


state 24

   19 modifier: PRIVATE STATIC .

    $default  reduce using rule 19 (modifier)


state 25

    8 class_body: OPEN_BRACE class_body_elems CLOSE_BRACE .

    $default  reduce using rule 8 (class_body)


state 26

   10 class_body_elems: class_body_elems class_body_decl .

    $default  reduce using rule 10 (class_body_elems)


state 27

   25 type: ID .
   35 constructor_decl: modifier ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   36                 | modifier ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 34

    $default  reduce using rule 25 (type)


state 28

   22 type: INT .

    $default  reduce using rule 22 (type)


state 29

   23 type: FLOAT .

    $default  reduce using rule 23 (type)


state 30

   24 type: BOOLEAN .

    $default  reduce using rule 24 (type)


state 31

   33 method_decl: modifier VOID . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34            | modifier VOID . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID  shift, and go to state 35


state 32

   14 field_decl: modifier var_decl .

    $default  reduce using rule 14 (field_decl)


state 33

   21 var_decl: type . variables SEMI_COLON
   31 method_decl: modifier type . ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier type . ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    ID  shift, and go to state 36

    variables  go to state 37
    variable   go to state 38


state 34

   35 constructor_decl: modifier ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   36                 | modifier ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 39
    INT                shift, and go to state 28
    FLOAT              shift, and go to state 29
    BOOLEAN            shift, and go to state 30
    CLOSE_PARANTHESIS  shift, and go to state 40

    type          go to state 41
    formals       go to state 42
    formal_param  go to state 43


state 35

   33 method_decl: modifier VOID ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   34            | modifier VOID ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 44


state 36

   28 variable: ID . sqr_brkt_mult
   31 method_decl: modifier type ID . OPEN_PARANTHESIS CLOSE_PARANTHESIS block
   32            | modifier type ID . OPEN_PARANTHESIS formals CLOSE_PARANTHESIS block

    OPEN_PARANTHESIS  shift, and go to state 45

    $default  reduce using rule 29 (sqr_brkt_mult)

    sqr_brkt_mult  go to state 46


state 37

   21 var_decl: type variables . SEMI_COLON
   27 variables: variables . COMMA variable

    SEMI_COLON  shift, and go to state 47
    COMMA       shift, and go to state 48


state 38

   26 variables: variable .

    $default  reduce using rule 26 (variables)


state 39

   25 type: ID .

    $default  reduce using rule 25 (type)


state 40

   35 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 50


state 41

   39 formal_param: type . variable

    ID  shift, and go to state 51

    variable  go to state 52


state 42

   36 constructor_decl: modifier ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   38 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 54


state 43

   37 formals: formal_param .

    $default  reduce using rule 37 (formals)


state 44

   33 method_decl: modifier VOID ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   34            | modifier VOID ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 39
    INT                shift, and go to state 28
    FLOAT              shift, and go to state 29
    BOOLEAN            shift, and go to state 30
    CLOSE_PARANTHESIS  shift, and go to state 55

    type          go to state 41
    formals       go to state 56
    formal_param  go to state 43


state 45

   31 method_decl: modifier type ID OPEN_PARANTHESIS . CLOSE_PARANTHESIS block
   32            | modifier type ID OPEN_PARANTHESIS . formals CLOSE_PARANTHESIS block

    ID                 shift, and go to state 39
    INT                shift, and go to state 28
    FLOAT              shift, and go to state 29
    BOOLEAN            shift, and go to state 30
    CLOSE_PARANTHESIS  shift, and go to state 57

    type          go to state 41
    formals       go to state 58
    formal_param  go to state 43


state 46

   28 variable: ID sqr_brkt_mult .
   30 sqr_brkt_mult: sqr_brkt_mult . OPEN_SQR_BRACKET CLOSE_SQR_BRACKET

    OPEN_SQR_BRACKET  shift, and go to state 59

    $default  reduce using rule 28 (variable)


state 47

   21 var_decl: type variables SEMI_COLON .

    $default  reduce using rule 21 (var_decl)


state 48

   27 variables: variables COMMA . variable

    ID  shift, and go to state 51

    variable  go to state 60


state 49

   40 block: OPEN_BRACE . stmt_mult CLOSE_BRACE

    INT_CONST             shift, and go to state 61
    FLOAT_CONST           shift, and go to state 62
    STRING_CONST          shift, and go to state 63
    FLOAT_CONST_MANTISSA  shift, and go to state 64
    ID                    shift, and go to state 65
    INT                   shift, and go to state 28
    FLOAT                 shift, and go to state 29
    IF                    shift, and go to state 66
    WHILE                 shift, and go to state 67
    FOR                   shift, and go to state 68
    RETURN                shift, and go to state 69
    BREAK                 shift, and go to state 70
    CONTINUE              shift, and go to state 71
    NULL_TOKEN            shift, and go to state 72
    TRUE                  shift, and go to state 73
    FALSE                 shift, and go to state 74
    THIS                  shift, and go to state 75
    SUPER                 shift, and go to state 76
    NEW                   shift, and go to state 77
    OPEN_BRACE            shift, and go to state 49
    SEMI_COLON            shift, and go to state 78
    BOOLEAN               shift, and go to state 30
    OPEN_PARANTHESIS      shift, and go to state 79
    PLUS_PLUS             shift, and go to state 80
    MINUS_MINUS           shift, and go to state 81

    var_decl           go to state 82
    type               go to state 83
    block              go to state 84
    stmt_mult          go to state 85
    stmt               go to state 86
    literal            go to state 87
    int_const          go to state 88
    float_const        go to state 89
    string_const       go to state 90
    primary            go to state 91
    lhs                go to state 92
    field_access       go to state 93
    array_access       go to state 94
    method_invocation  go to state 95
    assign             go to state 96
    stmt_expr          go to state 97


state 50

   35 constructor_decl: modifier ID OPEN_PARANTHESIS CLOSE_PARANTHESIS block .

    $default  reduce using rule 35 (constructor_decl)


state 51

   28 variable: ID . sqr_brkt_mult

    $default  reduce using rule 29 (sqr_brkt_mult)

    sqr_brkt_mult  go to state 46


state 52

   39 formal_param: type variable .

    $default  reduce using rule 39 (formal_param)


state 53

   38 formals: formals COMMA . formal_param

    ID       shift, and go to state 39
    INT      shift, and go to state 28
    FLOAT    shift, and go to state 29
    BOOLEAN  shift, and go to state 30

    type          go to state 41
    formal_param  go to state 98


state 54

   36 constructor_decl: modifier ID OPEN_PARANTHESIS formals CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 99


state 55

   33 method_decl: modifier VOID ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 100


state 56

   34 method_decl: modifier VOID ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   38 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 101


state 57

   31 method_decl: modifier type ID OPEN_PARANTHESIS CLOSE_PARANTHESIS . block

    OPEN_BRACE  shift, and go to state 49

    block  go to state 102


state 58

   32 method_decl: modifier type ID OPEN_PARANTHESIS formals . CLOSE_PARANTHESIS block
   38 formals: formals . COMMA formal_param

    COMMA              shift, and go to state 53
    CLOSE_PARANTHESIS  shift, and go to state 103


state 59

   30 sqr_brkt_mult: sqr_brkt_mult OPEN_SQR_BRACKET . CLOSE_SQR_BRACKET

    CLOSE_SQR_BRACKET  shift, and go to state 104


state 60

   27 variables: variables COMMA variable .

    $default  reduce using rule 27 (variables)


state 61

   68 int_const: INT_CONST .

    $default  reduce using rule 68 (int_const)


state 62

   69 float_const: FLOAT_CONST .

    $default  reduce using rule 69 (float_const)


state 63

   71 string_const: STRING_CONST .

    $default  reduce using rule 71 (string_const)


state 64

   70 float_const: FLOAT_CONST_MANTISSA .

    $default  reduce using rule 70 (float_const)


state 65

   25 type: ID .
   86 field_access: ID .

    ID        reduce using rule 25 (type)
    $default  reduce using rule 86 (field_access)


state 66

   53 stmt: IF . OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt else_part

    OPEN_PARANTHESIS  shift, and go to state 105


state 67

   48 stmt: WHILE . OPEN_PARANTHESIS expr CLOSE_PARANTHESIS stmt

    OPEN_PARANTHESIS  shift, and go to state 106


state 68

   49 stmt: FOR . OPEN_PARANTHESIS for_init SEMI_COLON for_condition SEMI_COLON for_var_update CLOSE_PARANTHESIS stmt

    OPEN_PARANTHESIS  shift, and go to state 107


state 69

   46 stmt: RETURN . SEMI_COLON
   47     | RETURN . expr SEMI_COLON

    INT_CONST             shift, and go to state 61
    FLOAT_CONST           shift, and go to state 62
    STRING_CONST          shift, and go to state 63
    FLOAT_CONST_MANTISSA  shift, and go to state 64
    ID                    shift, and go to state 108
    NULL_TOKEN            shift, and go to state 72
    TRUE                  shift, and go to state 73
    FALSE                 shift, and go to state 74
    THIS                  shift, and go to state 75
    SUPER                 shift, and go to state 76
    NEW                   shift, and go to state 109
    SEMI_COLON            shift, and go to state 110
    OPEN_PARANTHESIS      shift, and go to state 79
    PLUS                  shift, and go to state 111
    PLUS_PLUS             shift, and go to state 80
    MINUS                 shift, and go to state 112
    MINUS_MINUS           shift, and go to state 81
    NOT                   shift, and go to state 113

    literal            go to state 87
    int_const          go to state 88
    float_const        go to state 89
    string_const       go to state 90
    primary            go to state 114
    lhs                go to state 92
    field_access       go to state 93
    array_access       go to state 94
    method_invocation  go to state 115
    expr               go to state 116
    assign             go to state 117
    new_array          go to state 118


state 70

   44 stmt: BREAK . SEMI_COLON

    SEMI_COLON  shift, and go to state 119


state 71
